@startuml
class WorkflowList {
    id: Long
    apiId: String
    title: String
    description: Option[String]
    parentId: Option[Long]
    position: Long
    listType: WorkflowListType
    ownerApiId: Option[String]
    createdAt: LocalDateTime
    updatedAt: LocalDateTime
}

class User {
    id: Long
    apiId: String
    username: String
    isActive: Boolean
    createdAt: LocalDateTime
    updatedAt: LocalDateTime
}

class Event {
    id: Long
    apiId: String
    eventType: EventType
    workflowListApiId: String
    parentApiId: Option[String]
    oldParentApiId: Option[String]
    newParentApiId: Option[String]
    oldPosition: Option[Long]
    newPosition: Option[Long]
    newType: Option[WorkflowListType]
    resourcesUpdated: Option[Long]
    temporalQueryResult: Option[TemporalQueryResultEntity]
    userApiId: String
    createdAt: LocalDateTime
}

abstract class Resource {
    id: Long,
    workflowListId: Long,
    createdAt: LocalDateTime
    updatedAt: LocalDateTime
}

class NumericResource {
    label: String
    value: Float
}

class TemporalResource {
    startDate: Option[LocalDateTime]
    dueDate: Option[LocalDateTime]
    durationInMinutes: Option[Long]
}

class TextualResource {
    label: String
    value: Option[String]
}

class UserResource{
    userId: Long
}

class WorkSchedule {
    startWorkAtHour: Int
    stopWorkAtHour: Int
    workingDaysOfWeek: List[DayOfWeek]
    schedulingStartDate: Option[LocalDateTime]
}

enum WorkflowListType {
    BOARD
    LIST
    ITEM
}

enum EventType {
    CREATE
    DELETE
    UPDATE
    MOVE
    REORDER
    CONVERT
    UPDATE_RESOURCES
    TEMPORAL_QUERY
}

WorkflowList "1" --* "0..1" WorkflowList : parentId

WorkflowList "1" --* "0..1" TemporalResource

WorkflowList "1" --* "0..1" UserResource

WorkflowList "1" --* "0...*" NumericResource

WorkflowList "1" --* "0..*" TextualResource

UserResource "*" -u- "1" User

Event "*" -- "1" WorkflowList

Event "*" -- "1"  User

Event -r- EventType
Event -- WorkflowListType
WorkflowList -- WorkflowListType

NumericResource --|> Resource
TemporalResource --|> Resource
TextualResource --|> Resource
UserResource --|> Resource
@enduml